20231016 樣式更新:兩側邊寬

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -50,7 +50,6 @@
 			<i class="fa fa-remove"></i>
 		</a>
 		<div class="Bar-block Center">
-			<a href="About&CV.html" class="Bar-text-grey Button">CV</a>
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
@@ -92,7 +91,7 @@
 		</div>
 
 		<!-- Projects Grid ,ad ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="ad" style="margin-right: 50px; margin-left: 50px;">
+		<div class="w3-row-padding tabcontent margin-right-left" id="ad">
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
@@ -253,7 +252,7 @@
 		</div>
 
 		<!-- Projects Grid ,kv ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="kv" style="margin-right: 50px; margin-left: 50px;">
+		<div class="w3-row-padding tabcontent margin-right-left" id="kv">
 			<!-- 左行 -->
 			<div class="w3-third">
 				<!-- 2023_8 -->
@@ -279,7 +278,7 @@
 		</div>
 
 		<!-- Projects Grid ,layout ------------------------------------------------------------------------------->
-		<div class="w3-row-padding tabcontent" id="layout" style="margin-right: 50px; margin-left: 50px;">
+		<div class="w3-row-padding tabcontent margin-right-left" id="layout">
 			<section class="sc_sponsor main_sc">
 				<div>
 					<!-- 子分類 -->
