--- a/Prints.html
+++ b/Prints.html
@@ -50,7 +50,6 @@
 			<i class="fa fa-remove"></i>
 		</a>
 		<div class="Bar-block Center">
-			<a href="About&CV.html" class="Bar-text-grey Button">CV</a>
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
@@ -84,7 +83,7 @@
 
 		<!-- Projects Grid -->
 		<!-- 左行 -->
-		<div class="w3-row-padding" id="myphoto" style=" padding: 10px;">
+		<div class="w3-row-padding margin-right-left" id="myphoto">
 			<div class="w3-third">
 				<div class="container">
 					<img src="img/lithography/2021_1.jpg" style="width:100%" class="image">
