--- a/About&CV.html
+++ b/About&CV.html
@@ -60,7 +60,6 @@
 			<i class="fa fa-remove"></i>
 		</a>
 		<div class="Bar-block Center">
-			<a href="About&CV.html" class="Bar-text-grey Button">CV</a>
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
@@ -175,6 +174,11 @@
 					</div>
 				</a>
 			</div>
+			
+
+			<p class="text-gray text22"><b>獲獎經歷</b></p>
+			<a href="https://laborchcg.com.tw/23C33/" target="_blank"><p class="text-gray text17">2023&emsp;創意梗圖競賽「彰化就業好所在」組第三名</p></a>
+			<p class="text-gray text17">2023&emsp;黑白繪畫大賽2023 電繪組 G組--公開組(年齡不限) 金獎</p>
 
 			<p class="text-gray text22"><b>展演經歷</b></p>
 			<p class="text-gray text17">2023&emsp;《Render Soul》，錄像，「宇宙‧無極—科技藝術特展」，臺中市屯區藝文中心，臺中</p>
