--- a/Vedio.html
+++ b/Vedio.html
@@ -50,7 +50,6 @@
 			<i class="fa fa-remove"></i>
 		</a>
 		<div class="Bar-block Center">
-			<a href="About&CV.html" class="Bar-text-grey Button">CV</a>
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
@@ -84,8 +83,20 @@
 
 		<!-- Projects Grid -->
 		<!-- 左行 -->
-		<div class="w3-row-padding" id="myphoto" style=" padding: 10px;">
+		<div class="w3-row-padding margin-right-left" id="myphoto">
 			<div class="w3-third">
+				<div class="container">
+					<img src="img/video/TSF2023_1.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+					</div>
+				</div>
+				<div class="container">
+					<img src="img/video/TSF2023_4.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+					</div>
+				</div>
 				<div class="container">
 					<img src="img/video/RenderSoul.jpg" style="width:100%" class="image">
 					<div class="overlay">
@@ -102,9 +113,15 @@
 			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/video/Epidemic&.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_2.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<a href="https://www.behance.net/gallery/159279887/Epidemic-" target="_blank"><div class="text">《Epidemic&》<br>錄像<br>2021</div></a>
+						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+					</div>
+				</div>
+				<div class="container">
+					<img src="img/video/goldfish_1.00_00_09_07.Still004.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://twitter.com/AsusMetaverse/status/1708741773999387046?s=20"  target="_blank"><div class="text">《金魚腦》<br>動畫<br>2023</div></a>
 					</div>
 				</div>
 				<div class="container">
@@ -117,9 +134,15 @@
 			<!-- 右行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/video/goldfish_1.00_00_09_07.Still004.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_3.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<a href="https://twitter.com/AsusMetaverse/status/1708741773999387046?s=20"  target="_blank"><div class="text">《金魚腦》<br>動畫<br>2023</div></a>
+						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+					</div>
+				</div>
+				<div class="container">
+					<img src="img/video/Epidemic&.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.behance.net/gallery/159279887/Epidemic-" target="_blank"><div class="text">《Epidemic&》<br>錄像<br>2021</div></a>
 					</div>
 				</div>
 				<div class="container">
