--- a/WebDesign.html
+++ b/WebDesign.html
@@ -50,7 +50,6 @@
 			<i class="fa fa-remove"></i>
 		</a>
 		<div class="Bar-block Center">
-			<a href="About&CV.html" class="Bar-text-grey Button">CV</a>
 			<a href="GameDesign.html" class="Bar-text-grey Button">Game Design</a>
 			<a href="Illustration.html" class="Bar-text-grey Button">Illustration</a>
 			<a href="Prints.html" class="Bar-text-grey Button">Print</a>
@@ -83,7 +82,7 @@
 		</div>
 
 		<!-- Projects Grid -->
-		<div class="w3-row-padding" id="myphoto" style=" padding: 10px;">
+		<div class="w3-row-padding margin-right-left" id="myphoto">
 			<!-- 左行 -->
 			<div class="w3-third">
 				<div class="container">
