20231113首頁更新: 圖片動態 排版

--- a/Vedio.html
+++ b/Vedio.html
@@ -86,17 +86,23 @@
 		<div class="w3-row-padding margin-right-left" id="myphoto">
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/video/TSF2023_1.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_2競選篇.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
 				<div class="container">
-					<img src="img/video/TSF2023_4.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_1.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
+				<!-- <div class="container">
+					<img src="img/video/TSF2023_4.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+					</div>
+				</div> -->
 				<div class="container">
 					<img src="img/video/RenderSoul.jpg" style="width:100%" class="image">
 					<div class="overlay">
@@ -113,11 +119,23 @@
 			<!-- 中行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img/video/TSF2023_2.jpg" style="width:100%" class="image">
+					<img src="img/video/TSF2023_1選票篇.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
+				<!-- <div class="container">
+					<img src="img/video/TSF2023_3旗海飄揚篇.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+					</div>
+				</div> -->
+				<!-- <div class="container">
+					<img src="img/video/TSF2023_2.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+					</div>
+				</div> -->
 				<div class="container">
 					<img src="img/video/goldfish_1.00_00_09_07.Still004.jpg" style="width:100%" class="image">
 					<div class="overlay">
@@ -133,10 +151,16 @@
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
+				<!-- <div class="container">
+					<img src="img/video/TSF2023_4布條篇.jpg" style="width:100%" class="image">
+					<div class="overlay">
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
+					</div>
+				</div> -->
 				<div class="container">
 					<img src="img/video/TSF2023_3.jpg" style="width:100%" class="image">
 					<div class="overlay">
-						<div class="text">台灣科學節<br>廣告動畫<br>2023</div>
+						<a href="https://www.youtube.com/playlist?list=PLkAO237EKMKtlEdDKWMRME7M8IRXOqSYW" target="_blank"><div class="text">台灣科學節<br>廣告動畫<br>2023</div></a>
 					</div>
 				</div>
 				<div class="container">
