20231119 10月作品更新

--- a/DIGITIMES2023-.html
+++ b/DIGITIMES2023-.html
@@ -118,6 +118,11 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\336x280a.jpg" style="width:100%" class="image">
+									<!-- 2023_9 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\336X280.gif" style="width:100%" class="image">
+									<!-- 2023_8月前 -->
 									<img src="img\digitimes\ad\ad\2023_3to7\FB.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_3to7\限動.jpg" style="width:100%" class="image">
 									<img src="img\digitimes\ad\ad\2023_3to7\1120697R5_1080-1080-11.jpg" style="width:100%"
@@ -150,6 +155,11 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\v2.jpg" style="width:100%" class="image">
+									<img src="img\digitimes\ad\ad\2023_9to12\728-x-90.gif" style="width:100%" class="image">
+									<!-- 2023_9 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\1121655.gif" style="width:100%" class="image">
 									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\ad\2023_8\728-x-90.gif" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\1080x1080.jpg" style="width:100%">
@@ -173,6 +183,8 @@
 								</div>
 								<!-- edm -->
 								<div class="Ad_item" data-cat="edm">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\edm\2023_9to12\edm_TechStats.jpg" style="width:100%" class="image">
 									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\edm\2023_8\Asia問卷調查EDM中文.jpg" style="width:100%" class="image">
 								</div>
@@ -181,6 +193,10 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\600x90a.jpg" style="width:100%" class="image">
+									<!-- 2023_9 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\720 x 480.jpg" style="width:100%" class="image">
 									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\ad\2023_8\支付在手2.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\728-H90.gif" style="width:100%">
@@ -198,6 +214,9 @@
 								</div>
 								<!-- 平面廣告 -->
 								<div class="Ad_item" data-cat="print_ad">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\print_ad\2023_9to12\1027_Dforum.jpg" style="width:100%">
+									<!-- 2023_7月前 -->
 									<img src="img\digitimes\ad\print_ad\2023_3to7\1120649R13_全十.jpg" style="width:100%">
 									<img src="img\digitimes\ad\print_ad\2023_3to7\1120698R2_半十.jpg" style="width:100%">
 								</div>
@@ -213,6 +232,10 @@
 							<div class="w3-quarter" style=" padding: 15px;">
 								<!-- 廣告 -->
 								<div class="Ad_item" data-cat="ad">
+									<!-- 2023_10 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\1920x1080.jpg" style="width:100%" class="image">
+									<!-- 2023_9 -->
+									<img src="img\digitimes\ad\ad\2023_9to12\1200X1200.jpg" style="width:100%" class="image">
 									<!-- 2023_8 -->
 									<img src="img\digitimes\ad\ad\2023_8\亞灣雲平台1.jpg" style="width:100%">
 									<img src="img\digitimes\ad\ad\2023_8\1121283R1_fb.jpg" style="width:100%">
@@ -255,24 +278,26 @@
 		<div class="w3-row-padding tabcontent margin-right-left" id="kv">
 			<!-- 左行 -->
 			<div class="w3-third">
+				<!-- 2023_9 -->
+				<img src="img\digitimes\kv\2023_9to12\v2-2.jpg" style="width:100%" class="image">
 				<!-- 2023_8 -->
-				<img src="img\digitimes\kv\2023_8\kv_c.jpg" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2023_3to8\kv_c.jpg" style="width:100%" class="image">
 				<!-- 2023_7月前 -->
-				<img src="img\digitimes\kv\2023_3to7\ASC_kv.jpg" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2023_3to8\ASC_kv.jpg" style="width:100%" class="image">
 				<img src="" style="width:100%">
 			</div>
 			<!-- 中行 -->
 			<div class="w3-third">
 				<!-- 2023_7月前 -->
-				<img src="img\digitimes\kv\2023_3to7\AWS-JIC_ol_修.png" style="width:100%" class="image">
-				<img src="img\digitimes\kv\2023_3to7\1120667R2.jpg" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2023_3to8\AWS-JIC_ol_修.png" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2023_3to8\1120667R2.jpg" style="width:100%" class="image">
 				<img src="" style="width:100%">
 			</div>
 			<!-- 右行 -->
 			<div class="w3-third">
 				<!-- 2023_7月前 -->
-				<img src="img\digitimes\kv\2023_3to7\1121020R2.jpg" style="width:100%" class="image">
-				<img src="img\digitimes\kv\2023_3to7\1120776-1.jpg" style="width:100%">
+				<img src="img\digitimes\kv\2023_3to8\1121020R2.jpg" style="width:100%" class="image">
+				<img src="img\digitimes\kv\2023_3to8\1120776-1.jpg" style="width:100%">
 				<img src="" style="width:100%">
 			</div>
 		</div>
