--- a/index.html
+++ b/index.html
@@ -127,12 +127,19 @@
                 style="width:100%; margin:auto; padding:50px;">
             </div>
             <div class="w3-half" style=" padding:20px">
-              <h1 class="Center text-gray">簡歷</h1>
+              <p class="text-gray text22"><b>工作經驗</b></p>
+              <a href="DIGITIMES2023-.html">
+                <p class="text-gray text17">2023-&emsp;DIGITIMES 視覺設計</p>
+              </a><br>
+              <p class="text-gray text22"><b>學歷</b></p>
+              <p class="text-gray text17">2020-2023&emsp;國立臺灣藝術大學 多媒體動畫藝術學系（新媒體藝術碩士班），臺北</p>
+              <p class="text-gray text17">2016-2020&emsp;國立臺北藝術大學 美術學系（版畫組），臺北</p><br>
+
               <p class="text-gray text22"><b>獲獎經歷</b></p>
               <a href="https://laborchcg.com.tw/23C33/" target="_blank">
                 <p class="text-gray text17">2023&emsp;創意梗圖競賽「彰化就業好所在」組第三名</p>
               </a>
-              <p class="text-gray text17">2023&emsp;黑白繪畫大賽2023 電繪組 G組--公開組(年齡不限) 金獎</p>
+              <p class="text-gray text17">2023&emsp;黑白繪畫大賽2023 電繪組 G組--公開組(年齡不限) 金獎</p><br>
 
               <p class="text-gray text22"><b>展演經歷</b></p>
               <p class="text-gray text17">2023&emsp;《Render Soul》，錄像，「宇宙‧無極—科技藝術特展」，臺中市屯區藝文中心，臺中</p>
@@ -149,16 +156,8 @@
               <p class="text-gray text17">2019&emsp;《可以看我一下嗎？美術館給你的情書》，聯展，關美館，臺北</p>
             </div>
           </div>
-          <!-- CV Grid -->
-          <!-- 中文 -->
           <br>
-          <p class="text-gray text22"><b>工作經驗</b></p>
-          <a href="DIGITIMES2023-.html">
-            <p class="text-gray text17">2023-&emsp;DIGITIMES 視覺設計</p>
-          </a>
-          <p class="text-gray text22"><b>學歷</b></p>
-          <p class="text-gray text17">2020-2023&emsp;國立臺灣藝術大學 多媒體動畫藝術學系（新媒體藝術碩士班），臺北</p>
-          <p class="text-gray text17">2016-2020&emsp;國立臺北藝術大學 美術學系（版畫組），臺北</p><br>
+
 
         </div>
       </div>
