--- a/Illustration.html
+++ b/Illustration.html
@@ -86,7 +86,7 @@
 			<!-- 左行 -->
 			<div class="w3-third">
 				<div class="container">
-					<img src="img\digitimes\kv\2023_8\kv_c.jpg" style="width:100%" class="image">
+					<img src="img\digitimes\kv\2023_9to12\v2-2.jpg" style="width:100%" class="image">
 					<div class="overlay">
 						<a href="DIGITIMES2023-.html"><div class="text">DIGITIMES INC.<br>2023~</div></a>
 					</div>
